dim/spec/test_input/invalid_input/no_match_pattern.dim
Config:
  - originator: CompanyName
    files: ./test*.dim
    category: module
